mock-exams/exam2/q11/ns-restricted.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: restricted
spec: {}
status: {}
