mock-exams/exam2/q11/app-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: internal
  name: app-pod
  namespace: restricted
spec:
  containers:
  - image: busybox
    name: app-pod
    command: ["sleep", "3600"]
    ports:
      - containerPort: 8080
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
