mock-exams/exam2/q11/database.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: database
  name: database
  namespace: restricted
spec:
  containers:
  - image: nginx:latest
    name: database
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
