mock-exams/exam2/q11/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: internal
  namespace: restricted
spec:
  podSelector:
    matchLabels:
      app: internal
  policyTypes:
    - Egress
  egress:
    - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
    - to: 
      - podSelector:
          matchLabels:
            app: database
      ports:
        - protocol: TCP
          port: 80
